--- a/DesktopApp/DesktopApp.csproj
+++ b/DesktopApp/DesktopApp.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Services\SuspendAndResumeService.cs" />
     <Compile Include="Services\SuspensionState.cs" />
     <Compile Include="Services\ThemeSelectorService.cs" />
+    <Compile Include="Signaling\Conductor.cs" />
+    <Compile Include="Signaling\Signalling.cs" />
     <Compile Include="ViewModels\InteractionsPanelViewModel.cs" />
     <Compile Include="ViewModels\OperationsViewModel.cs" />
     <Compile Include="ViewModels\RemoteConnectionViewModel.cs" />
