--- a/DesktopApp/DesktopApp.csproj
+++ b/DesktopApp/DesktopApp.csproj
@@ -138,9 +138,12 @@
     <Compile Include="BackgroundTasks\FramePoolTask.cs" />
     <Compile Include="BackgroundTasks\PeerConnectionTask.cs" />
     <Compile Include="Constants\MyConstants.cs" />
+    <Compile Include="Helpers\BoolToVisConverter.cs" />
+    <Compile Include="Helpers\EnumToHorzontalConverter.cs" />
     <Compile Include="Helpers\IntToInformationConverter.cs" />
     <Compile Include="Helpers\EnumToBooleanConverter.cs" />
     <Compile Include="Helpers\SettingsStorageExtensions.cs" />
+    <Compile Include="Helpers\StringToImageConverter.cs" />
     <Compile Include="Services\ActivationService.cs" />
     <Compile Include="Activation\DefaultActivationHandler.cs" />
     <Compile Include="Services\BackgroundTaskService.cs" />
@@ -262,9 +265,9 @@
     <Content Include="Assets\Arrows\minimize.svg" />
     <Content Include="Assets\File_Operations_Svg\cancel.svg" />
     <Content Include="Assets\File_Operations_Svg\check.svg" />
-    <Content Include="Assets\File_Operations_Svg\down.svg" />
+    <Content Include="Assets\File_Operations_Svg\Download.svg" />
     <Content Include="Assets\File_Operations_Svg\refresh.svg" />
-    <Content Include="Assets\File_Operations_Svg\up.svg" />
+    <Content Include="Assets\File_Operations_Svg\Update.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\after-effects.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\ai.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\audition.svg" />
