--- a/DesktopApp/DesktopApp.csproj
+++ b/DesktopApp/DesktopApp.csproj
@@ -119,6 +119,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>6.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
       <Version>2.3.200213001</Version>
     </PackageReference>
@@ -277,6 +280,7 @@
     <Content Include="Assets\File_Type_Icons_Svg\csv.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\dbf.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\doc.svg" />
+    <Content Include="Assets\File_Type_Icons_Svg\docx.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\dreamweaver.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\dwg.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\exe.svg" />
@@ -290,7 +294,7 @@
     <Content Include="Assets\File_Type_Icons_Svg\iso.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\javascript.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\jpg.svg" />
-    <Content Include="Assets\File_Type_Icons_Svg\json-file.svg" />
+    <Content Include="Assets\File_Type_Icons_Svg\json.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\mp3.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\mp4.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\pdf.svg" />
@@ -308,6 +312,7 @@
     <Content Include="Assets\File_Type_Icons_Svg\xml.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\zip-1.svg" />
     <Content Include="Assets\File_Type_Icons_Svg\zip.svg" />
+    <Content Include="Assets\OperationIcons\open-folder.svg" />
     <Content Include="Assets\OperationIcons\portable-document-format.svg" />
     <Content Include="Assets\OperationIcons\SettingIcons\film.svg">
       <SubType>Designer</SubType>
